fix scrollbar theme on chromium based browsers

--- a/mcww_web/css/layout.css
+++ b/mcww_web/css/layout.css
@@ -103,3 +103,9 @@ button, a, label, input {
     -webkit-tap-highlight-color: transparent;
 }
 
+body:not(.dark) {
+    color-scheme: light;
+}
+body.dark {
+    color-scheme: dark;
+}
